--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 h3{
-    color: darkred;
+    color: rgb(79, 0, 139);
 }
 body{
-    background-color: paleturquoise;
+    background-color: rgb(197, 238, 175);
 }
